backend/vulnerability_analysis/testing/hof2/segments/klee-out-1/test000001.exec.err
Error: external call with symbolic argument: __ubsan_handle_sub_overflow
File: testing/hof5/segments/segment_2_klee.c
Line: 12
assembly.ll line: 7845
State: 3
Stack: 
	#000007845 in __klee_posix_wrapped_main() at testing/hof5/segments/segment_2_klee.c:12
	#100006064 in __user_main(1, 140706767175680, 140706767175696) at src/runtime/POSIX/klee_init_env.c:245
	#200000518 in __uClibc_main(140690988204032, 1, 140706767175680, 0, 0, 0, 0) at libc/misc/internals/__uClibc_main.c:401
	#300000683 in main(1, 140706767175680)
